status/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: status-deployment
  namespace: status
spec:
  replicas: 1
  selector:
    matchLabels:
      app: status
  template:
    metadata:
      labels:
        app: status
    spec:
      restartPolicy: Always
      containers:
        - name: status
          image: sachiyer/status:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
