status/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: status
  name: status
spec:
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: status
